--- a/cassie_orm/src/mapper/menu_mapper.html
+++ b/cassie_orm/src/mapper/menu_mapper.html
@@ -4,7 +4,7 @@
         select t3.* from sys_role_user t1
         left join sys_role_menu t2 on t1.role_id = t2.role_id
         left join sys_menu t3 on t2.menu_id = t3.id
-        where t1.user_id = #{user_id} and t3.del_flag = 0
+        where t1.user_id = #{user_id} and t3.del_flag = 0   AND t3.agency_code = #{agency_code}
         <if test="t != ''">
             and t3.menu_type = #{t}
         </if>
